Fixed small certificates on mobile

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ img.certificate:hover {
 }
 
 img.certificate.certificate-small {
-    width: 32.9%;
+    width: 32.3%;
     text-align: center;
     display: inline-block;
     vertical-align: middle;
